syntax = "proto3";

service AcademusBespoke{
    //Academus
    rpc checkAuthority (CheckAuthorityReq) returns (CheckAuthorityRes) {}
    //Bespoke
    rpc checkShareCode(CheckShareCodeReq) returns (CheckShareCodeRes){}
}

message CheckAuthorityReq{
    string userId = 1;
    string namespace = 2;
}
message CheckAuthorityRes{
    bool result = 1;
}

message CheckShareCodeReq{
    string code = 1;
}
message CheckShareCodeRes{
    string gameId = 1;
}