syntax = "proto3";

service BespokeService {
    rpc checkShareCode (CheckShareCodeReq) returns (CheckShareCodeRes) {
    }
}

message CheckShareCodeReq {
    string code = 1;
}
message CheckShareCodeRes {
    string gameId = 1;
}